# dynamo-odata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HUMAN_TODO.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: expand-flow.md  hipaa.md
examples/: async_example.py  fastapi_expand.py  fastapi_list.py  filters_and_projections.py  sync_example.py
plan/: DYNAMO_ODATA_STANDALONE_PLAN.md  EXECUTION_ROADMAP.md  PHASE_4_FILES_FOR_UPSTREAM.md  PHASE_4_UPSTREAM_CONTRIBUTION.md  PHASE_5_INTEGRATION_PLAN.md  PHASE_6_PUBLICATION_PLAN.md  README.md
src/dynamo_odata/: __init__.py  db.py  dynamo_filter.py  expand.py  guardrails.py  projection.py  schema.py  utils.py
src/dynamo_odata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dynamo_odata/fastapi/: __init__.py  params.py  service.py
src/dynamo_odata/odata_query/: __init__.py  ast.py  exceptions.py  grammar.py  lark_parser.py  rewrite.py  typing.py  utils.py  visitor.py
src/dynamo_odata/odata_query/dynamo/: __init__.py  apply.py  base.py
src/dynamo_odata/odata_query/dynamodb/: __init__.py  apply.py  visitor.py
src/dynamo_odata/profiles/: __init__.py  regulated.py
tests/: test_async_resource_heal.py  test_batch_get.py  test_build_filter.py  test_cursor_signing.py  test_delete.py  test_expand.py  test_fastapi_service.py  test_get.py  test_get_all.py  test_gsi_transact_restore.py  test_guardrails.py  test_key_helpers.py  test_key_schema_config.py  test_list_async.py  test_odata_dynamo.py  test_offset_cursor.py  test_params.py  test_projection.py  test_public_api.py  test_put.py  test_put_item_create_item.py  test_regulated_profile.py  test_scan_all_paginated.py  test_sort_items.py  test_update_item.py  test_upstream_dynamodb_api.py
