[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamo-odata"
version = "0.3.0"
description = "OData filter and projection helpers for AWS DynamoDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Robert Smith", email = "robert@rsmith.us" }]
license = "MIT"
keywords = ["dynamodb", "odata", "boto3", "aws", "projection", "filter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
  "Topic :: Database",
]
dependencies = [
  "boto3>=1.26",
  "lark>=1.1",
]

[project.optional-dependencies]
async = ["aioboto3>=13.0"]
fastapi = ["fastapi>=0.100", "pydantic>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "pre-commit>=3.7", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/one-table-labs/dynamo-odata"
Repository = "https://github.com/one-table-labs/dynamo-odata"
Issues = "https://github.com/one-table-labs/dynamo-odata/issues"
Changelog = "https://github.com/one-table-labs/dynamo-odata/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dynamo_odata" = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "UP",    # pyupgrade
  "S",     # flake8-bandit (security)
  "RUF",   # ruff-specific rules
  "SIM",   # flake8-simplify
  "BLE",   # flake8-blind-except
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "PIE",   # flake8-pie
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "T20",   # flake8-print
  "ERA",   # eradicate (commented-out code)
]
ignore = [
  "B008",  # do not perform function calls in default arguments
  "S101",  # allow assert statements (used extensively in tests)
  "BLE001", # allow broad except — intentional in some error boundary patterns
  "A002",  # allow `filter` as a parameter name — public API surface
  "RUF002", # allow EN dash in docstrings — intentional formatting
  "RUF003", # allow EN dash in comments — intentional formatting
]

[tool.ruff.lint.per-file-ignores]
"src/dynamo_odata/odata_query/lark_parser.py" = ["E501"]  # unsplittable regex literals in grammar

[tool.ruff.lint.isort]
known-first-party = ["dynamo_odata"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["dynamo_odata.db", "dynamo_odata.odata_query.*"]
ignore_errors = true
